[gd_scene load_steps=4 format=3 uid="uid://cnpc123456"]

[ext_resource type="Script" path="res://entities/npc.gd" id="1"]
[ext_resource type="Script" path="res://components/dialogue_component.gd" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npc"]
size = Vector2(40, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 80.0

[node name="NPC" type="StaticBody2D" groups=["npc"]]
script = ExtResource("1")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
color = Color(0.8, 0.65, 0.26, 1)

[node name="Head" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = -45.0
offset_right = 15.0
offset_bottom = -25.0
color = Color(0.9, 0.82, 0.63, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_npc")

[node name="DialogueComponent" type="Node" parent="."]
script = ExtResource("2")
npc_name = "Gardien de la Ville"
dialogue_text = "Bienvenue dans la Ville, voyageur ! C'est une zone sûre. Utilisez les portails colorés pour explorer les autres cartes. Bonne chance !"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="InteractionHint" type="Label" parent="."]
visible = false
offset_left = -30.0
offset_top = -70.0
offset_right = 30.0
offset_bottom = -50.0
text = "[E]"
horizontal_alignment = 1
